# native-app-experiment

./: Cargo.toml  README.md  justfile
backend/: Cargo.toml  build.rs  justfile
backend/protos/: list.proto  todo.proto  user.proto
backend/src/: config.rs  main.rs  manager.rs
backend/src/db/: mod.rs
entity/src/entities/: list.rs  mod.rs  prelude.rs  to_do.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20240325_202911_create_list_table.rs  m20240325_205556_create_todo_table.rs
tauri-app/: package-lock.json  package.json
