[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tonic = "0.11.0"
prost = "0.12"
prost-types = { version = "0.12" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.11.0"
